@@ -16,8 +16,8 @@
 	<li>
 		###LINK:###USER.COMBINED_NAME###|###TS:plugin.tx_community.pages.userProfile###|tx_community[user]=###USER.UID######
 
-		###LOOP:WIDGET:USER_PROFILE.PROFILE_ACTIONS|USER###
-		###LOOP:WIDGET:USER_PROFILE.IMAGE|USER###
+		###LOOP:WIDGET:userProfile.profileActions|USER###
+		###LOOP:WIDGET:userProfile.image|USER###
 	</li>
 	<!-- ###LOOP_CONTENT### -->
 	<!-- ###LOOP:USERS### end -->
